
	* server/buildutil.c, server/server.h: Merged road_add() and
	ship_add() into edge_add() which handles bridges as well.

	* server/develop.c (mode_road_building): Fixed road building to
	support ships and bridges as well.

	* server/pregame.c: Added support for bridge building.

	* server/turn.c (build_add): Added bridge building support.

	* server/Makefile.am: Added basic Seafarers game.

2000-05-02  Andy Heroff <aheroff@mediaone.net>

	* Project imported into the SourceForge CVS server.

	* INSTALL: Added 'simple' instructions for building Debian and Red
	  Hat binary packages.

	* Updated all version references to 0.5.0 for release.

	* Released version 0.5.0.

2000-04-28  Andy Heroff <aheroff@mediaone.net>

	* client/connect.c, client/name.c: Added "<enter> closes dialog"
	  functionality to both of the above files/dialogs.

	* client/chat.c, client/client.c: Added chat parser with posing (:)
	  and semi-posing (;) functionality.

1999-12-22  Dan Egnor <egnor@ofb.net>

	* server/STATES: Attempt at documenting the server state machine.

        * server/trade.c: Fixed? a possible trade race condition.  Actually, 
	the fix was already there, I just think it wasn't quite right, since 
	it didn't reset the player's state properly.  This should be reviewed.

	* server/5-6-player.game: New game file for 5/6 player expansion 
	(from tlau@cs.washington.edu).

	* client/turn.c, server/trade.c: Implemented option to remove 
	build/trade order restriction, as per 5/6 player expansion rules 
	(from tlau@cs.washington.edu).

	* server/gnocatan-server.c, meta-server/gnocatan-meta-server.c:
	Portability fixes (e.g. for Solaris).

	* client/Makefile.am, meta-server/Makefile.am, server/Makefile.am:
	Removed silly setgid "games" from install target.

	* client/help/C/gnocatan.sgml: Fixed some errors in the SGML help-file 
	source.  (Too bad this help file is getting out of date anyway...)

	* macros/Makefile.in: removed from CVS, since it's generated.
