@@ -41,14 +41,14 @@ static gint turn_player = -1;	/* whose turn is it */
 static gint my_player_id = -1;	/* what is my player number */
 
 static GdkColor token_colors[] = {
-	{ 0, 0xff00, 0x0000, 0x0000 }, /* red */
-	{ 0, 0xff00, 0xa500, 0x0000 }, /* orange */
-	{ 0, 0xff00, 0xff00, 0x0000 }, /* yellow */
-	{ 0, 0x0000, 0xff00, 0xff00 }, /* cyan */
-	{ 0, 0xff00, 0x0000, 0xff00 }, /* magenta */
-	{ 0, 0x0000, 0x0000, 0xff00 }, /* blue */
-	{ 0, 0xff00, 0xff00, 0xff00 }, /* white */
-	{ 0, 0x0000, 0xff00, 0x0000 } /* green */
+	{ 0, 0xCD00, 0x0000, 0x0000 }, /* red */
+	{ 0, 0x1E00, 0x9000, 0xFF00 }, /* blue */
+	{ 0, 0xE800, 0xE800, 0xE800 }, /* white */
+	{ 0, 0xFF00, 0x7F00, 0x0000 }, /* orange */
+	{ 0, 0xEE00, 0xEE00, 0x0000 }, /* yellow */
+	{ 0, 0x8E00, 0xE500, 0xEE00 }, /* cyan */
+	{ 0, 0xD100, 0x5F00, 0xEE00 }, /* magenta */
+	{ 0, 0x0000, 0xEE00, 0x7600 } /* green */
 };
 
 void player_init()
